updated all what was done in the readme
